--- a/docs/diskcache.ipynb
+++ b/docs/diskcache.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hoohoohoohoohoohoohoohoo'"
+       "'hoohoohoohoohoohoohoohoohoohoohoohoo'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
     "        tag=\"long_func\", # specifying a tag allows to evict SOME cache.\n",
     "        typed=True,\n",
     ")\n",
-    "def long_func(a: str, b: int, c: int= 2):\n",
+    "def long_func(a: str, b: int, c: int= 2, d=3):\n",
     "    print(\"calculation\")\n",
     "    time.sleep(2)\n",
     "    return a * b * called() * c\n",
@@ -59,7 +59,7 @@
     "def called():\n",
     "    return 3\n",
     "\n",
-    "long_func(\"hoo\", 2)"
+    "long_func(\"hoo\", 2, c=2)"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
